--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "mock-premier-league",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "nodemon ./src/index.ts",
+    "build": "tsc --project tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -17,10 +20,16 @@
   },
   "homepage": "https://github.com/Beloved1310/Premier-League#readme",
   "dependencies": {
+    "@types/express": "^4.17.20",
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
