--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts",
+    "dev": "nodemon ./api/index.ts",
     "build": "tsc --project tsconfig.json"
   },
   "repository": {
@@ -20,17 +20,25 @@
   },
   "homepage": "https://github.com/Beloved1310/Premier-League#readme",
   "dependencies": {
-    "@types/express": "^4.17.20",
-    "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
+    "mongoose": "^5.12.7",
+    "nanoid": "^3.1.30",
+    "redis": "^4.6.10",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^4.9.3"
   }
 }
