--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "importHelpers": true,
     "target": "ES2018" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-    "lib": ["es6"] /* Specify library files to be included in the compilation. */,
+    "lib": [
+      "es6"
+    ] /* Specify library files to be included in the compilation. */,
     "allowJs": true /* Allow javascript files to be compiled. */,
     "outDir": "dist" /* Redirect output structure to the directory. */,
     "sourceMap": true,
@@ -17,4 +19,12 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["global.d.ts", "./api/**/*"],
+  "exclude": [
+    "node_modules",
+    "./api/**/*.spec.ts",
+    "./api/jest.setup.redis-mock.js",
+    "dist",
+    "templates",
+    "__tests__"
+  ]
 }
