--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.3",
+    "ioredis": "^5.3.2",
     "jest": "^29.7.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,7 +45,9 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/mocha": "^10.0.3",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.8.9",
     "@types/redis": "^4.0.11",
+    "@types/supertest": "^2.0.15",
     "babel-jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "should": "^13.2.3",
@@ -55,7 +59,14 @@
       "^.+\\.(ts|tsx)$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "testRegex": ".*\\.spec\\.ts$",
   "transform": {
