--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redis": "^4.6.10",
     "superset": "^2.0.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
