--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Beloved1310/Premier-League#readme",
   "dependencies": {
     "@types/jest": "^29.5.6",
+    "@vercel/kv": "^0.2.3",
+    "@vercel/node": "^3.0.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
