--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon ./api/index.ts",
     "build": "tsc --project tsconfig.json",
+    "postinstall": "tsc",
     "compile": "tsc"
   },
   "repository": {
